<resources>
    <string name="app_name">Dumpster Mobile App</string>
    <string name="status_not_connected">Status: not connected</string>
    <string name="connect_to_dumpster">START DUMPING</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="i_need_more_time">I NEED MORE TIME</string>
    <string name="dumpster_not_available">Status: dumpster not available</string>
    <string name="dumpster_connected">Status: connected</string>
    <string name="dumpster_error">Status: connection errror</string>
</resources>
